Updated herolku app name and email

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -55,6 +55,6 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "kwilliam-prod" #Must be unique in Heroku
-          heroku_email: "keith@webizly.com"
+          heroku_app_name: "pm42-project1-prd"
+          heroku_email: "pm42@njit.edu"
           usedocker: true
