--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -22,6 +22,7 @@ jobs:
         run: pytest -vv
 
   deploy_heroku:
+    needs: run_pytest
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
