--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -21,7 +21,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Test with pytest
-        run: pytest -vv
+        run: pytest --pylint -vv
 
   build-container:
     needs: runtest
